Fixed broken admin notifications in dark mode
Closes https://linear.app/ghost/issue/DES-1405/version-update-notification-not-visible-in-dark-mode https://github.com/TryGhost/Ghost/issues/28403

We weren't handling dark mode for Admin notifications.

--- a/ghost/admin/app/styles/components/notifications.css
+++ b/ghost/admin/app/styles/components/notifications.css
@@ -218,7 +218,8 @@
     align-items: center;
     padding: 14px 15px;
     border-bottom: #dfe1e3 1px solid;
-    background-color: white;
+    background-color: var(--white);
+    color: var(--black);
 }
 
 .gh-alert-content {
